SERVER-22133 generate COUNT_SCAN plans properly from the plan cache