src/mongo/db/exec/count_scan.cpp
@@ -105,7 +105,11 @@ PlanStage::StageState CountScan::doWork(WorkingSetID* out) {
         return PlanStage::NEED_TIME;
     }
 
-    *out = WorkingSet::INVALID_ID;
+    WorkingSetID id = _workingSet->allocate();
+    WorkingSetMember* member = _workingSet->get(id);
+    member->obj = Snapshotted<BSONObj>(SnapshotId(), BSONObj().getOwned());
+    member->transitionToOwnedObj();
+    *out = id;
     return PlanStage::ADVANCED;
 }
 
